[gd_scene load_steps=3 format=2]

[ext_resource path="res://assets/ui/panel_blue.png" type="Texture" id=1]
[ext_resource path="res://src/ui/command_plane.gd" type="Script" id=2]

[node name="command_plane" type="HBoxContainer"]
margin_top = 320.0
margin_right = 644.0
margin_bottom = 400.0
rect_min_size = Vector2( 640, 80 )
custom_constants/separation = 0
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="player_side" type="HBoxContainer" parent="."]
margin_right = 320.0
margin_bottom = 80.0
custom_constants/separation = 0

[node name="panel" type="NinePatchRect" parent="player_side"]
margin_right = 80.0
margin_bottom = 80.0
rect_min_size = Vector2( 80, 80 )
texture = ExtResource( 1 )
patch_margin_left = 21
patch_margin_top = 20
patch_margin_right = 20
patch_margin_bottom = 13

[node name="status" type="NinePatchRect" parent="player_side"]
margin_left = 80.0
margin_right = 320.0
margin_bottom = 80.0
rect_min_size = Vector2( 240, 80 )
texture = ExtResource( 1 )
patch_margin_left = 21
patch_margin_top = 20
patch_margin_right = 19
patch_margin_bottom = 19

[node name="menu" type="HBoxContainer" parent="player_side/status"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -110.0
margin_top = -10.0
margin_right = 110.0
margin_bottom = 10.0
custom_constants/separation = 20
__meta__ = {
"_edit_use_anchors_": false
}

[node name="attack" type="Button" parent="player_side/status/menu"]
margin_right = 60.0
margin_bottom = 20.0
rect_min_size = Vector2( 60, 0 )
text = "Attack"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="switch" type="Button" parent="player_side/status/menu"]
margin_left = 80.0
margin_right = 140.0
margin_bottom = 20.0
rect_min_size = Vector2( 60, 0 )
text = "Switch"

[node name="surrender" type="Button" parent="player_side/status/menu"]
margin_left = 160.0
margin_right = 220.0
margin_bottom = 20.0
rect_min_size = Vector2( 60, 0 )
text = "Yield"

[node name="attack_menu" type="GridContainer" parent="player_side/status"]
visible = false
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -112.0
margin_top = -22.0
margin_right = 112.0
margin_bottom = 22.0
columns = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="attack1" type="Button" parent="player_side/status/attack_menu"]
margin_right = 110.0
margin_bottom = 20.0
rect_min_size = Vector2( 110, 20 )
text = "Rocket Cannon"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="attack2" type="Button" parent="player_side/status/attack_menu"]
margin_left = 114.0
margin_right = 224.0
margin_bottom = 20.0
rect_min_size = Vector2( 110, 0 )
text = "Lock On"

[node name="attack3" type="Button" parent="player_side/status/attack_menu"]
margin_top = 24.0
margin_right = 110.0
margin_bottom = 44.0
text = "Dig In"

[node name="back" type="Button" parent="player_side/status/attack_menu"]
margin_left = 114.0
margin_top = 24.0
margin_right = 224.0
margin_bottom = 44.0
text = "BACK"

[node name="switch_menu" type="GridContainer" parent="player_side/status"]
visible = false
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -114.0
margin_top = -22.0
margin_right = 114.0
margin_bottom = 22.0
columns = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="unit1" type="Button" parent="player_side/status/switch_menu"]
margin_right = 114.0
margin_bottom = 20.0
rect_min_size = Vector2( 110, 20 )
text = "Red Rocket Man"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="unit2" type="Button" parent="player_side/status/switch_menu"]
margin_left = 118.0
margin_right = 228.0
margin_bottom = 20.0
rect_min_size = Vector2( 110, 0 )
text = "Blue Tank"

[node name="unit3" type="Button" parent="player_side/status/switch_menu"]
margin_top = 24.0
margin_right = 114.0
margin_bottom = 44.0
rect_min_size = Vector2( 60, 0 )
text = "Yellow Cannon"

[node name="back" type="Button" parent="player_side/status/switch_menu"]
margin_left = 118.0
margin_top = 24.0
margin_right = 228.0
margin_bottom = 44.0
text = "BACK"

[node name="surrender_menu" type="HBoxContainer" parent="player_side/status"]
visible = false
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -115.0
margin_top = -20.0
margin_right = 115.0
margin_bottom = 20.0
custom_constants/separation = 10
__meta__ = {
"_edit_use_anchors_": false
}

[node name="yes" type="Button" parent="player_side/status/surrender_menu"]
margin_right = 100.0
margin_bottom = 40.0
rect_min_size = Vector2( 100, 40 )
text = "Surrender"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="back" type="Button" parent="player_side/status/surrender_menu"]
margin_left = 110.0
margin_right = 230.0
margin_bottom = 40.0
rect_min_size = Vector2( 120, 40 )
text = "Don't give up!"

[node name="blocker" type="NinePatchRect" parent="player_side/status"]
anchor_right = 1.0
anchor_bottom = 1.0
rect_min_size = Vector2( 240, 80 )
texture = ExtResource( 1 )
patch_margin_left = 21
patch_margin_top = 20
patch_margin_right = 19
patch_margin_bottom = 19
__meta__ = {
"_edit_use_anchors_": false
}

[node name="enemy_side" type="HBoxContainer" parent="."]
margin_left = 320.0
margin_right = 640.0
margin_bottom = 80.0
custom_constants/separation = 0

[node name="options" type="NinePatchRect" parent="enemy_side"]
margin_right = 240.0
margin_bottom = 80.0
rect_min_size = Vector2( 240, 40 )
texture = ExtResource( 1 )
patch_margin_left = 21
patch_margin_top = 20
patch_margin_right = 19
patch_margin_bottom = 19
__meta__ = {
"_edit_use_anchors_": false
}

[node name="status" type="NinePatchRect" parent="enemy_side"]
margin_left = 240.0
margin_right = 320.0
margin_bottom = 80.0
rect_min_size = Vector2( 80, 80 )
texture = ExtResource( 1 )
patch_margin_left = 21
patch_margin_top = 20
patch_margin_right = 20
patch_margin_bottom = 13

[connection signal="pressed" from="player_side/status/menu/attack" to="." method="_on_attack_pressed"]
[connection signal="pressed" from="player_side/status/menu/switch" to="." method="_on_switch_pressed"]
[connection signal="pressed" from="player_side/status/menu/surrender" to="." method="_on_surrender_pressed"]
[connection signal="pressed" from="player_side/status/attack_menu/attack1" to="." method="_on_attack1_pressed"]
[connection signal="pressed" from="player_side/status/attack_menu/attack2" to="." method="_on_attack2_pressed"]
[connection signal="pressed" from="player_side/status/attack_menu/attack3" to="." method="_on_attack3_pressed"]
[connection signal="pressed" from="player_side/status/attack_menu/back" to="." method="_on_back_pressed"]
[connection signal="pressed" from="player_side/status/switch_menu/unit1" to="." method="_on_unit1_pressed"]
[connection signal="pressed" from="player_side/status/switch_menu/unit2" to="." method="_on_unit2_pressed"]
[connection signal="pressed" from="player_side/status/switch_menu/unit3" to="." method="_on_unit3_pressed"]
[connection signal="pressed" from="player_side/status/switch_menu/back" to="." method="_on_back_pressed"]
[connection signal="pressed" from="player_side/status/surrender_menu/yes" to="." method="_on_yes_pressed"]
[connection signal="pressed" from="player_side/status/surrender_menu/back" to="." method="_on_back_pressed"]
